Aligned bottom nav content and made minor fixes to margins

--- a/styles.scss
+++ b/styles.scss
@@ -1,8 +1,14 @@
 /*
+   **************************
+   * Created: May 27, 2017  *
+   * Author: Thierry Mwamba *
+   **************************
+
     SCSS file that auto compile into css
 */
-body {
+body, html {
     font-family: Garamond !important;
+    height: 100%;
 }
 
 .header-title {
@@ -20,6 +26,8 @@ body {
     .list-group {
         margin-top: 50px;
         text-align: center;
+        height: 100%;
+        overflow-x: scroll;
         
         .list-group-item {
             height: 200px;
@@ -36,12 +44,20 @@ body {
         }
         .two {
             background-color: #AC3B31;
+            box-shadow: 10px 5px 2px 4px rgba(0,0,0,.4);
+            
+            p {
+                color: #888;
+                font-size: 15px;
+                margin-bottom: 0;
+            }
         }
             .drag {
                 max-width: 20%;
             }
         .four {
-            float: right
+            float: right;
+            box-shadow: 10px 5px 2px 4px rgba(0,0,0,.4);
         }
     }
     
@@ -49,24 +65,60 @@ body {
         text-align: center;
         width: 50%;
         margin: 0 auto;
+    }
+    
+    .middle-container {
+        background-color: dodgerblue;
+        height: 300px;
+    }
+    
+    .form-container {
+        max-width: 30%;
+        margin: 20px  auto;
+        margin-bottom: 50px;
         
-    .black-ops {
-        color: black;
-        background-color: white;
-        max-width: 100%;
+        input:not([type]), input[type="text"]  {
+            text-align: center;
         }
     }
 }
 
-.second {
-    p {
-        background-color: cornflowerblue;
-        color: azure;
-        font-size: 18px;
+
+.navbar-fixed-bottom {
+    .bottom-nav {
+        max-width: 100%;
         text-align: center;
-        padding: 5px;
-        border: 3px solid #eee;
-        height: auto;
+        padding: 20px 0;
+        background-color: #000;
+        color: #888;
+        margin: 0 0 10px 0;
+        
+         ul:first-child {
+                    padding-left: 0;
+                }
+        
+        li {
+            list-style-type: none;
+            display: inline-block;
+            min-width: 100px;
+            font-size: 15px;
+            font-family: Graphik web, sans-serif;
+            
+            .content {
+                display: inline-grid;
+                text-align: center;
+                padding: 15px 0 5px 20%;
+            
+                li {
+                    list-style-type: none;
+                }
+            }
+        }
+    }
+    .copyrights {
+        p {
+            text-align: center;
+        }
     }
 }
 
